fix overflow

--- a/webapps/Workspace/css/ws.css
+++ b/webapps/Workspace/css/ws.css
@@ -15,8 +15,6 @@ body {
 
 .header {
     background: #48A5E0;
-    /* background: #3B9AD5;
-    box-shadow: inset 0 3px 3px #106AA5; */
     position: relative;
 }
 
@@ -87,6 +85,7 @@ body {
     background: none;
     margin: 0;
     padding: 0;
+    z-index: auto;
 }
 
 .footer-spacer {
